[gd_scene load_steps=3 format=3 uid="uid://dw1v64k1wvhuk"]

[ext_resource type="FontFile" uid="uid://dtdrb0o0ca4nh" path="res://assets/fonts/PixelOperator8.ttf" id="1_gqxcq"]
[ext_resource type="Script" path="res://levels/credits.gd" id="1_haw52"]

[node name="Credits" type="CanvasLayer"]
script = ExtResource("1_haw52")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 386.0
offset_top = 176.0
offset_right = 770.0
offset_bottom = 224.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_gqxcq")
theme_override_font_sizes/font_size = 48
text = "You did it!"

[node name="Button2" type="Node2D" parent="."]
position = Vector2(-90, -39)

[node name="ColorRect2" type="ColorRect" parent="Button2"]
offset_left = 575.0
offset_top = 519.0
offset_right = 773.0
offset_bottom = 551.0
color = Color(0.513694, 0.000193816, 0.515814, 1)

[node name="Button" type="Button" parent="Button2"]
offset_left = 574.0
offset_top = 518.0
offset_right = 780.0
offset_bottom = 550.0
theme_override_fonts/font = ExtResource("1_gqxcq")
theme_override_font_sizes/font_size = 24
text = "Do it again"

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 394.0
offset_top = 296.0
offset_right = 778.0
offset_bottom = 344.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_gqxcq")
theme_override_font_sizes/font_size = 32
text = "Coins: 0/202"
horizontal_alignment = 1

[node name="CongratsLabel" type="Label" parent="."]
offset_left = 248.0
offset_top = 354.0
offset_right = 924.0
offset_bottom = 402.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.933333, 0.113725, 1)
theme_override_fonts/font = ExtResource("1_gqxcq")
theme_override_font_sizes/font_size = 32
text = "Can you find them all?"
horizontal_alignment = 1

[connection signal="button_up" from="Button2/Button" to="." method="_on_button_button_up"]
